--- a/Game.html
+++ b/Game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <script src="projec.js"></script>
-    <link rel="stylesheet" type="text/css" href="2 proj.css">
+      <script src="game.js"></script>
+    <link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body>
      <h1>The Great<br> 
